Fix Warpified colors after upgrading Vitepress (#134)
* Fix links to MDN Anchor in prop tables

* Set background of component examples to warp bg variable

* Update custom css to fix issues when upgrading VitePress

* Code cleanup of Icons example file

* Fix layout issues with ThemeSwitcher after upgrading VitePress

--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -1,10 +1,8 @@
 :root {
-  --vp-c-brand: #BE3830;
-  --vp-c-brand-dark: #BE3830;
-  --vp-home-hero-name-color: #BE3830;
-  --vp-c-brand-darker: #9F2F28;
-  --vp-c-brand-light: #CF4840;
-  --vp-c-brand-lighter: #E6A29D;
+  --vp-c-brand-1: #BE3830;
+  --vp-c-brand-2: #c63f36;
+  --vp-c-brand-3: #CF4840;
+  --vp-c-brand-soft: rgba(255,72,64,.14);
 }
 
 html {
@@ -12,12 +10,6 @@ html {
 }
 
 body {
-  --vp-c-brand: #BE3830;
-  --vp-c-brand-dark: #BE3830;
-  --vp-home-hero-name-color: #BE3830;
-  --vp-c-brand-darker: #8E2A24;
-  --vp-c-brand-light: #CF4840;
-  --vp-c-brand-lighter: #E6A29D;
   --vp-font-family-base: Finntype, Inter, -apple-system,
     BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
     'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
@@ -25,49 +17,53 @@ body {
 }
 
 html.dark body {
-  --vp-c-brand: #F6D553;
-  --vp-c-brand-dark: #F6D553;
+  --vp-c-brand-1: #F6D553;
+  --vp-c-brand-2: #F6D553;
+  --vp-c-brand-3: #F6D553;
   --vp-home-hero-name-color: #F6D553;
+  --vp-c-text-1: #FFFBD5;
+  --vp-sidebar-bg-color: #182237;
+  --vp-c-bg: #131B2D;
+  --vp-c-bg-soft: #182237;
+  --vp-c-bg-alt: #0b0f1d;
+  --vp-nav-bg-color: #131B2D;
+  --vp-code-color: #EFC2BF;
+  --vp-code-bg: #0b0f1d;
+  --vp-code-block-bg: #0b0f1d;
 }
 
-.vp-doc ul {
-  font-size: 14px;
+.dark .VPNavBarTitle {
+  --vp-c-text-1: #F6D553
 }
 
 /* weight was 500, finnfont doesnt ship 'medium', but might be fun to actually ship the right fonts here? */
 .VPNavBarMenuLink {
   font-weight: 700 !important;
 }
-/* padding-top was waaaaay too much, make the border stand out a touch more */
+/* make the border stand out a touch more */
 .vp-doc h2 {
-  padding-top: 8px;
   border-top-width: 2px;
 }
 /* wasn't enough breathing room here, add some more */
-.vp-doc h3 {
-  margin: 48px 0 0;
-}
-/* wasn't enough breathing room here, add some more */
 .vp-doc h4 {
-  margin: 24px 0 0;
+  margin: 24px 0 0 0;
 }
-/* 16px is too big for tech docs, line-height was comically large */
+/* line-height was comically large */
 .vp-doc p {
-  font-size: 14px;
   line-height: 1.5;
 }
 
 /* change sidebar active-page highlighting a bit */
 .VPSidebar .link {
-  transition: border-color 0.2s linear !important;
+  transition: border-color .2s linear !important;
   border-left: 1px solid transparent;
 }
 .VPSidebar .link * {
-  transition: padding-left 0.3s ease, color 0.1s linear !important;
+  transition: padding-left .3s ease, color .1s linear !important;
 }
 .link.active {
-  border-color: var(--vp-c-brand);
+  border-color: var(--vp-c-brand-1);
 }
 .VPSidebar .link.active .link-text {
-  padding-left: 0.6rem;
+  padding-left: .6rem;
 }
